Changes related to SFDCJP-419

--- a/src/main/metadata/classes/DMRequestHelperJP.cls
+++ b/src/main/metadata/classes/DMRequestHelperJP.cls
@@ -151,7 +151,7 @@ public with sharing class  DMRequestHelperJP {
         */      
        
         
-    public static void updateStatus(List<DM_Request__c> triggerNew,Map<ID,DM_Request__c> oldMap)
+    public static void updateStatus(List<DM_Request__c> triggerNew,Map<ID,DM_Request__c> oldMap,boolean isInsert,boolean isUpdate)
     {
             set<id> CustomerId = new set<id>(); 
              list<DM_Request__c> DMList =new  list<DM_Request__c>();
@@ -166,34 +166,68 @@ public with sharing class  DMRequestHelperJP {
                           
        		for(DM_Request__c lstDMR:triggerNew)
             {
-         
-               if((lstDMR.Status__c=='to be sent')&&((lstDMR.Status1__c=='to be sent')||(lstDMR.Status2__c=='to be sent')||(lstDMR.Status3__c=='to be sent'))
-                 &&((lstDMR.Expected_DM_Material1__c!=oldMap.get(lstDMR.id).Expected_DM_Material1__c)||(lstDMR.Expected_DM_Material2__c!=oldMap.get(lstDMR.id).Expected_DM_Material2__c)||(lstDMR.Expected_DM_Material3__c!=oldMap.get(lstDMR.id).Expected_DM_Material3__c)
-                 ||(lstDMR.Status__c!=oldMap.get(lstDMR.id).Status__c)||(lstDMR.Status1__c!=oldMap.get(lstDMR.id).Status1__c)||(lstDMR.Status2__c!=oldMap.get(lstDMR.id).Status2__c)||(lstDMR.Status3__c!=oldMap.get(lstDMR.id).Status3__c))){
-                    
-                 
-                 for(DM_Request__c dmr:DMList){
-                     if(dmr.Customer_Name__c==lstDMR.Customer_Name__c){
-                 
-                             if((lstDMR.Expected_DM_Material1__c!=null)&&((lstDMR.Expected_DM_Material1__c==dmr.Expected_DM_Material1__c)||(lstDMR.Expected_DM_Material1__c==dmr.Expected_DM_Material2__c)||(lstDMR.Expected_DM_Material1__c==dmr.Expected_DM_Material3__c))){
-                                 lstDMR.Status1__c='Duplicate';
-                                 
-                             }
-                              if((lstDMR.Expected_DM_Material2__c!=null)&&((lstDMR.Expected_DM_Material2__c==dmr.Expected_DM_Material1__c)||(lstDMR.Expected_DM_Material2__c==dmr.Expected_DM_Material2__c)||(lstDMR.Expected_DM_Material2__c==dmr.Expected_DM_Material3__c))){
-                                
-                                 lstDMR.Status2__c='Duplicate';
-                                 
-                             }
-                             if((lstDMR.Expected_DM_Material3__c!=null)&&((lstDMR.Expected_DM_Material3__c==dmr.Expected_DM_Material1__c)||(lstDMR.Expected_DM_Material3__c==dmr.Expected_DM_Material2__c)||(lstDMR.Expected_DM_Material3__c==dmr.Expected_DM_Material3__c))){
-                                 
-                                 lstDMR.Status3__c='Duplicate';
-                             }
+                if(isUpdate){
+             
+                   if((lstDMR.Status__c=='to be sent')&&((lstDMR.Status1__c=='to be sent')||(lstDMR.Status2__c=='to be sent')||(lstDMR.Status3__c=='to be sent'))
+                     &&((lstDMR.Expected_DM_Material1__c!=oldMap.get(lstDMR.id).Expected_DM_Material1__c)||(lstDMR.Expected_DM_Material2__c!=oldMap.get(lstDMR.id).Expected_DM_Material2__c)||(lstDMR.Expected_DM_Material3__c!=oldMap.get(lstDMR.id).Expected_DM_Material3__c)
+                     ||(lstDMR.Status__c!=oldMap.get(lstDMR.id).Status__c)||(lstDMR.Status1__c!=oldMap.get(lstDMR.id).Status1__c)||(lstDMR.Status2__c!=oldMap.get(lstDMR.id).Status2__c)||(lstDMR.Status3__c!=oldMap.get(lstDMR.id).Status3__c))){
+                        
+                     
+                     for(DM_Request__c dmr:DMList){
+                         if(dmr.Customer_Name__c==lstDMR.Customer_Name__c){
+                     
+                                 if((lstDMR.Expected_DM_Material1__c!=null)&&((lstDMR.Expected_DM_Material1__c==dmr.Expected_DM_Material1__c)||(lstDMR.Expected_DM_Material1__c==dmr.Expected_DM_Material2__c)||(lstDMR.Expected_DM_Material1__c==dmr.Expected_DM_Material3__c))){
+                                     lstDMR.Status1__c='Duplicate';
+                                     
+                                 }
+                                  if((lstDMR.Expected_DM_Material2__c!=null)&&((lstDMR.Expected_DM_Material2__c==dmr.Expected_DM_Material1__c)||(lstDMR.Expected_DM_Material2__c==dmr.Expected_DM_Material2__c)||(lstDMR.Expected_DM_Material2__c==dmr.Expected_DM_Material3__c))){
+                                    
+                                     lstDMR.Status2__c='Duplicate';
+                                     
+                                 }
+                                 if((lstDMR.Expected_DM_Material3__c!=null)&&((lstDMR.Expected_DM_Material3__c==dmr.Expected_DM_Material1__c)||(lstDMR.Expected_DM_Material3__c==dmr.Expected_DM_Material2__c)||(lstDMR.Expected_DM_Material3__c==dmr.Expected_DM_Material3__c))){
+                                     
+                                     lstDMR.Status3__c='Duplicate';
+                                 }
+                         }
                      }
-                 }
-               
+                   
+               }
+                   
            }
-               
-       }  
+                if(isInsert){
+             
+                   if((lstDMR.Status__c=='to be sent')&&((lstDMR.Status1__c=='to be sent')||(lstDMR.Status2__c=='to be sent')||(lstDMR.Status3__c=='to be sent'))
+                     &&((lstDMR.Expected_DM_Material1__c!=NULL)||(lstDMR.Expected_DM_Material2__c!=NULL)||(lstDMR.Expected_DM_Material3__c!=NULL)
+                     ||(lstDMR.Status__c!=NULL)||(lstDMR.Status1__c!=NULL)||(lstDMR.Status2__c!=NULL)||(lstDMR.Status3__c!=NULL))){
+                        
+                     
+                     for(DM_Request__c dmr:DMList){
+                         if(dmr.Customer_Name__c==lstDMR.Customer_Name__c){
+                     
+                                 if((lstDMR.Expected_DM_Material1__c!=null)&&((lstDMR.Expected_DM_Material1__c==dmr.Expected_DM_Material1__c)||(lstDMR.Expected_DM_Material1__c==dmr.Expected_DM_Material2__c)||(lstDMR.Expected_DM_Material1__c==dmr.Expected_DM_Material3__c))){
+                                     lstDMR.Status1__c='Duplicate';
+                                     
+                                 }
+                                  if((lstDMR.Expected_DM_Material2__c!=null)&&((lstDMR.Expected_DM_Material2__c==dmr.Expected_DM_Material1__c)||(lstDMR.Expected_DM_Material2__c==dmr.Expected_DM_Material2__c)||(lstDMR.Expected_DM_Material2__c==dmr.Expected_DM_Material3__c))){
+                                    
+                                     lstDMR.Status2__c='Duplicate';
+                                     
+                                 }
+                                 if((lstDMR.Expected_DM_Material3__c!=null)&&((lstDMR.Expected_DM_Material3__c==dmr.Expected_DM_Material1__c)||(lstDMR.Expected_DM_Material3__c==dmr.Expected_DM_Material2__c)||(lstDMR.Expected_DM_Material3__c==dmr.Expected_DM_Material3__c))){
+                                     
+                                     lstDMR.Status3__c='Duplicate';
+                                 }
+                         }
+                     }
+                   
+               }
+                   
+           }
+                
+                
+                
+       }
     
 	}
 }
