--- a/src/main/metadata-au/classes/AttachmentAfterTriggerHandler.cls
+++ b/src/main/metadata-au/classes/AttachmentAfterTriggerHandler.cls
@@ -38,13 +38,14 @@ public class AttachmentAfterTriggerHandler
         If(trigger.isInsert && trigger.isAfter){
             set<id> leadSet = new set<id>();
             list<lead__c> leadList = new list<lead__c>();
-            
+            list<Lead_Product__c> leadProductlst = new list<Lead_Product__c>();
             
             for(Attachment a : (List<Attachment>)trigger.new){                
                 String parentIdString = String.valueof(a.parentId);
-                if(parentIdString.startsWith('a0s')){
+                //if(parentIdString.startsWith('a0s')){
                    leadSet.add(a.ParentId);
-               }
+              // }
+              }
                 
                 for(lead__c lead:[select id,Attachment_Flag__c from lead__c where id IN:leadSet]){
                     lead.Attachment_Flag__c= true;
@@ -58,31 +59,44 @@ public class AttachmentAfterTriggerHandler
 
                     }
                 }
+                 for(Lead_Product__c leadProductObj :[select id,Attachment_Flag__c from Lead_Product__c where id IN:leadSet]){
+                    leadProductObj.Attachment_Flag__c= true;
+                    leadProductlst.add(leadProductObj);
+                }
+                
+                if(leadProductlst!= null && !leadProductlst.isEmpty()){
+                    try{
+                    update leadProductlst ;
+                    }catch(Exception e){
+
+                    }
+                }
+
 
                 
                 
-            }  
+        }  
             
             
-        }
         
-        If(trigger.isDelete && trigger.isAfter){
+        
+        if(trigger.isDelete && trigger.isAfter){
             set<id> leadSet = new set<id>();
             list<lead__c> leadList = new list<lead__c>();
             
             
             for(Attachment a : (list<Attachment>)trigger.oldMap.Values()){                
-                String parentIdString = String.valueof(a.parentId);
-                if(parentIdString.startsWith('a0s')){
-                   leadSet.add(a.ParentId);
-               }
+                    String parentIdString = String.valueof(a.parentId);
+                    leadSet.add(a.ParentId);
+                  
+              }
                 
-                for(lead__c lead:[select id,Attachment_Flag__c,(SELECT Id,Name FROM Attachments) from lead__c where id IN:leadSet]){
+             for(lead__c lead:[select id,Attachment_Flag__c,(SELECT Id,Name FROM Attachments) from lead__c where id IN:leadSet]){
                     system.debug('Attachments'+lead.Attachments);
                     if(lead.Attachments.isEmpty()){
                         system.debug('test1111111111111');
-                    lead.Attachment_Flag__c= false;
-                    leadList.add(lead);
+                        lead.Attachment_Flag__c= false;
+                        leadList.add(lead);
                     }
                 }
                 
@@ -90,10 +104,22 @@ public class AttachmentAfterTriggerHandler
                    
                     update leadList;
                 }
-
+             system.debug('@@@Laed Product11111@@'+leadSet);
+             List<Lead_Product__c> leadProductlist = new List<Lead_Product__c>();
+             system.debug('@@@Laed Product@@'+leadSet);
+             for(Lead_Product__c leadProductObj :[select id,Attachment_Flag__c,(SELECT Id,Name FROM Attachments) from Lead_Product__c where id IN:leadSet]){ 
+                 if(leadProductObj.Attachments.isEmpty()){
+                        system.debug('Lead Product:::');
+                        leadProductObj .Attachment_Flag__c= false;
+                        leadProductlist.add(leadProductObj );
+                  }
+             }   
+             
+             if(leadProductlist != null && leadProductlist.size() >0 ){
+                 update leadProductlist ;
+             }
                 
-                
-            }  
+            
             
             
         }
