test class fixes

--- a/src/main/metadata-au/classes/AttachmentAftertestclass.cls
+++ b/src/main/metadata-au/classes/AttachmentAftertestclass.cls
@@ -1,7 +1,7 @@
 @isTest
 public with sharing class AttachmentAftertestclass {
     
-    private static String Finance_Fleet_lead_RECORDTYPEID = Schema.Sobjecttype.Lead__c.getRecordTypeInfosByName().get('Finance Fleet Lead').getRecordTypeId();
+    private static String Finance_Fleet_lead_RECORDTYPEID = Schema.Sobjecttype.Lead__c.getRecordTypeInfosByName().get('Fleet Finance Lead').getRecordTypeId();
     private static String dealerRecordTypeId = Schema.SObjectType.account.getRecordTypeInfosByName().get('Dealer').getRecordTypeId();
     @istest(seealldata = false)
     public static void AttachmentAftertest() {
@@ -16,7 +16,7 @@ public with sharing class AttachmentAftertestclass {
             le1.Company_Account__c = acc.id;
             le1.RecordTypeId = Finance_Fleet_lead_RECORDTYPEID;
             le1.CAC_Lead_Status__c = 'Qualified';
-            insert le1;	
+            insert le1; 
             Attachment a = new Attachment(ParentId = le1.id , Name='testFile' , body=Blob.valueOf('Unit Test Attachment Body'));
             insert a; 
             delete a;
